Fix clipping

--- a/frontend/src/pages/Alerts/AlertSetupModal/AlertSetupModal.module.scss
+++ b/frontend/src/pages/Alerts/AlertSetupModal/AlertSetupModal.module.scss
@@ -118,7 +118,6 @@
     margin-top: 2vh;
     max-height: 45vh;
     min-height: 45vh;
-    overflow-y: auto;
 }
 
 .alertTypeSelected {
